# Bot

./: .env  .gitignore  config.py  main.py  my_base.db  pyproject.toml  requirements.txt
Keyboards/: Admin_kb.py  Base_kb.py  City_kb.py  Client_kb.py  Courier_kb.py  Kitchen_kb.py  Menu_kb.py  Product_kb.py
alembic/: env.py
alembic/versions/: 2025_04_09_1154-3bd4978e4bb6_create_all.py
database/: config.py  engine.py  models.py  my_base.db
database/crud/: admins_crud.py  base_cruds.py  cities_crud.py  clients_crud.py  couriers_crud.py  kitchens_crud.py  orders_crud.py  product_crud.py  user_crud.py
filters/: agree_with_form.py  getRole.py  isAdmin.py  isClient.py  isCourier.py  isKitchen.py  isNumber.py
routers/: __init__.py
routers/admin/: __init__.py  handlers.py  states.py
routers/callback_handlers/: __init__.py  admins_callback_handlers.py  cities_callback_handlers.py  client_callback_handlers.py  couriers_callback_handlers.py  kitchens_callback_handlers.py  menu_callback_handlers.py  product_callback_handlers.py  user_callback_handlers.py
routers/callback_handlers/cart/: cart_callback_handlers.py  states.py
routers/city/: __init__.py  handlers.py  states.py
routers/client/: __init__.py  handlers.py  states.py
routers/commands/: __init__.py  admin_commands.py  base_commands.py  city_commands.py  client_commands.py  kitchen_commands.py  product_commands.py
routers/courier/: __init__.py  handlers.py  states.py
routers/kitchen/: __init__.py  handlers.py  states.py
routers/product/: __init__.py  handlers.py  states.py
(+6 files in other folders)
